[project]
name = "turtle-tools"
version = "0.0.1"
authors = [
  {name="Yngve Mardal Moe"},
  {name="Marie Roald"},
]
description = "Simple utilities that extend Turtle"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["turtle", "education"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turtle_tools.py"]

[tool.hatch.envs.default]
dependencies = ["black", "ruff"]

[tool.black]
line-length = 79

[tool.ruff]
select = ["E", "F", "I"]